# Vendor-Performance-Analysis

./: .gitignore  ANALYSIS_REPORT.md  Makefile  README.md  Vendor Performace Analysis.ipynb  get_vendor_summary.py  ingestion_db.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
Dashboard/: Dashboard.pbix
config/: config.yaml
src/: __init__.py
src/analysis/: __init__.py  metrics.py
src/data/: __init__.py  loader.py  transformer.py
src/utils/: __init__.py  logger.py
src/visualization/: __init__.py  charts.py
tests/: conftest.py  test_metrics.py  test_transformer.py
